push all images

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                 <span id="element"></span>
             </div>
             <div class="rightSection">
-                <img src="C:\Users\NishantRai\Downloads\rear-view-programmer-working-all-night-long.jpg" alt="">
+                <img src="resource/rear-view-programmer-working-all-night-long.jpg" alt="">
             </div>
         </section>
         <hr>
@@ -185,14 +185,14 @@
             <h1>Skills</h1>
             <div class="box">
                 <div class="vertical-line">
-                    <img class="image-top" src="C:\Users\NishantRai\Downloads\html.png" alt="">
+                    <img class="image-top" src="resource/js.png" alt="">
                     <div class="vertical-title">HTML </div>
                     <div class="vertical-desc">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis,
                          magnam? Consequatur hic quo suscipit harum minima quae debitis? Dolorum temporibus nemo aliquam assumenda?
                     </div>
                 </div>
                 <div class="vertical-line">
-                    <img class="image-top" src="C:\Users\NishantRai\Downloads\css.png" alt="">
+                    <img class="image-top" src="resource/css.png" alt="">
                     <div class="vertical-title">CSS </div>
                     <div class="vertical-desc">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis,
                          magnam? Consequatur hic quo suscipit harum minima quae debitis? Dolorum temporibus nemo aliquam assumenda?
@@ -200,28 +200,28 @@
 
                 </div>
                 <div class="vertical-line">
-                    <img class="image-top" src="C:\Users\NishantRai\Downloads\js.png" alt="">
+                    <img class="image-top" src="resource/js.png" alt="">
                     <div class="vertical-title">JavaScript</div>
                     <div class="vertical-desc">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis,
                          magnam? Consequatur hic quo suscipit harum minima quae debitis? Dolorum temporibus nemo aliquam assumenda?
                     </div>
                 </div>
                 <div class="vertical-line">
-                    <img class="image-top" src="C:\Users\NishantRai\Downloads\java.png" alt="">
+                    <img class="image-top" src="resource/java.png" alt="">
                     <div class="vertical-title">Java</div>
                     <div class="vertical-desc">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis,
                          magnam? Consequatur hic quo suscipit harum minima quae debitis? Dolorum temporibus nemo aliquam assumenda?
                     </div>
                 </div>
                 <div class="vertical-line">
-                    <img class="image-top" src="C:\Users\NishantRai\Downloads\C++.svg" alt="">
+                    <img class="image-top" src="resource/C++.svg" alt="">
                     <div class="vertical-title">C++ </div>
                     <div class="vertical-desc">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis,
                          magnam? Consequatur hic quo suscipit harum minima quae debitis? Dolorum temporibus nemo aliquam assumenda?
                     </div>
                 </div>
                 <div class="vertical-line">
-                    <img class="image-top" src="C:\Users\NishantRai\Downloads\unnamed.png" alt="">
+                    <img class="image-top" src="resource/unnamed.png" alt="">
                     <div class="vertical-title">Data Structure & Algo</div>
                     <div class="vertical-desc">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis,
                          magnam? Consequatur hic quo suscipit harum minima quae debitis? Dolorum temporibus nemo aliquam assumenda?
