--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
             <span id="element"></span>
 
             <div class="buttons">
-                <button class="btn">Download Resume</button>
+                <button class="btn"><a href="resource/Nishant's Resume.pdf">Resume</a></button>
                 <button class="btn"><a href="https://github.com/">Github</a></button>
                 <button class="btn"><a href="https://leetcode.com">LeetCode</a></button>
                 <button class="btn"><a href="https://www.geeksforgeeks.org/">GFG</a></button>
