--- a/index.html
+++ b/index.html
@@ -267,6 +267,16 @@
                 <h3>Data Structures & Algorithms</h3>
                 <p>Optimized problem-solving across platforms.</p>
             </div>
+            <div class="skill-card">
+                <img src="resource/operating-system.png">
+                <h3>Data Structures & Algorithms</h3>
+                <p>Operating system</p>
+            </div>
+            <div class="skill-card">
+                <img src="resource/database_4248443.png">
+                <h3>Database management system</h3>
+                <p>Optimized problem-solving across platforms.</p>
+            </div>
         </div>
     </section>
 
