--- a/index.html
+++ b/index.html
@@ -269,13 +269,13 @@
             </div>
             <div class="skill-card">
                 <img src="resource/operating-system.png">
-                <h3>Data Structures & Algorithms</h3>
-                <p>Operating system</p>
+                <h3>Operating System</h3>
+                <p>Good understanding of OS concepts like processes, threads, and memory.</p>
             </div>
             <div class="skill-card">
                 <img src="resource/database_4248443.png">
                 <h3>Database management system</h3>
-                <p>Optimized problem-solving across platforms.</p>
+                <p>Skilled in designing and querying relational databases for efficient data management.</p>
             </div>
         </div>
     </section>
